--- a/src/styles/components/_portfolio.scss
+++ b/src/styles/components/_portfolio.scss
@@ -1,59 +1,33 @@
 /* Portfolio */
 
 .portfolio_container {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    gap: 1.25rem;
+    display: flex;
+    flex-direction: column;
+    gap: 5.25rem;
     margin-top: 3.12rem;
     margin-bottom: 1.25rem;
+    padding-inline: 10px;
     
     .portfolio__item {
-        position: relative;
-        object-fit: cover;
-        overflow: hidden;
+        display: flex;
+        gap: 20px;
         font-size: 0.9rem;
-        transition: all 0.7s;
-
-        &:hover {
-            transform: translateY(12px);
-            transition: all 0.7s;
-        }
-        
-        &:hover .portfolio__description {
-            visibility: visible;
-            opacity: 1;
-            transition: all 0.5s;
-            transform: translateY(-300px);
-        }
-
-        &:hover .portfolio__img {
-            opacity: 0.2;
-            -webkit-filter: grayscale(100%);
-            filter: grayscale(100%);
-        }
 
         .portfolio__img {
             width: 100%;
-            height: 100%;
+            max-width: 900px;
+            height: auto;
             object-fit: cover; 
             display: block;
-            transition: all 1s;
         }
 
         .portfolio__description {
-            padding: 50px;
-            position: absolute;
-            background-color: rgba(0, 0, 0, 0.7);
-            top: 18.75rem;
             height: 100%;
             width: 100%;
-            opacity: 0;
-            transition: all 0.5s;
-            z-index: 1;
+            max-width: 600px;
             display: flex;
-            justify-content: center;
             flex-direction: column;
-            text-align: center;
+            text-align: left;
 
             .portfolio__description-title {
                 color: $primary;
@@ -68,18 +42,39 @@
                 font-family: 'Raleway', sans-serif;
                 font-weight: 700;
             }
+
+            .portfolio__features {
+                display: flex;
+                flex-wrap: wrap;
+                gap: 5px;
+                margin-bottom: 1.25rem;
+                color: $white;
+                font-family: 'Raleway', sans-serif;
+                font-weight: 700;
+            
+                li {
+                    position: relative;
+                    padding-left: 15px;
+            
+                    &::before {
+                        content: '♦';
+                        position: absolute;
+                        left: 0;
+                        color: #4cb1f6;
+                        font-size: 1rem;
+                    }
+                }
+            }
         }
 
         .buttons__container {
             display: flex;
             align-items: center;
-            justify-content: center;
             gap: 0.31rem;
 
             .button {
                 display: flex;
                 align-items: center;
-                margin: auto;
                 background: #191919;
                 color: #f5f5f5;
                 padding: 5px 10px;
@@ -99,40 +94,18 @@
 
 /* Media Queries */
 
-@media (max-width: 1200px) {
-    .portfolio_container {
-        grid-template-columns: 1fr 1fr;
-    }
-}
-
 @media (max-width: 1000px) {
     .portfolio_container {
         grid-template-columns: 1fr;
         gap: 3.12rem;
         margin-top: 3.12rem;
         margin-bottom: 0;
-
-        .portfolio__item {
-            
-            .portfolio__description {
-                padding: 150px;
-            }
-
-            .buttons__container {
-                gap: 1.25rem;
-                margin: auto;
-            }
-        }
     }
 }
 
-@media (max-width: 700px) {
+@media (max-width: 1000px) {
     .portfolio_container .portfolio__item {
-            
-        .portfolio__description {
-            padding: 50px;
-        }
-
+        flex-direction: column;
         .buttons__container {
             gap: 0.31rem;
             margin: initial;
