--- a/src/styles/components/_navbar.scss
+++ b/src/styles/components/_navbar.scss
@@ -49,12 +49,12 @@ header {
         width: 100%;
         margin: 0 auto;
         z-index: 1;
+        transition: all 0.6s;
     }
 }
 
 .navbar_scroll {
     background-color: $white;
-    transition: 0.6s;
     z-index: 2;
 
     .navbar_list li span {
@@ -63,6 +63,13 @@ header {
 
     .hamburger_menu {
         color: $dark;
+    }
+
+    .navbar_logo {
+        transition: all 0.6s;
+        width: 70% !important;
+        height: auto;
+        object-fit: contain;
     }
 }
 
@@ -82,6 +89,7 @@ header {
             width: 100%;
             height: auto;
             object-fit: contain;
+            transition: all 0.6s;
         }
     }
     
