--- a/src/styles/components/_portfolio.scss
+++ b/src/styles/components/_portfolio.scss
@@ -75,7 +75,7 @@
             .button {
                 display: flex;
                 align-items: center;
-                background: #191919;
+                background: rgb(53, 50, 50);
                 color: #f5f5f5;
                 padding: 5px 10px;
                 font-family: "Poppins", sans-serif;
